tests/src/snapshots/pluma_tests__parse_success__regex_range_count.snap
---
source: tests/src/parse_success.rs
expression: "/\"aa\" \"b\"{1,8} \"cc\"/"
---

=== Source ===
/"aa" "b"{1,8} "cc"/

=== Tokens ===
[
    ForwardSlash(
        0,
        1,
    ),
    StringLiteral(
        2,
        4,
    ),
    StringLiteral(
        7,
        8,
    ),
    LeftBrace(
        9,
        10,
    ),
    DecimalDigits(
        10,
        11,
    ),
    Comma(
        11,
        12,
    ),
    DecimalDigits(
        12,
        13,
    ),
    RightBrace(
        13,
        14,
    ),
    StringLiteral(
        16,
        18,
    ),
    ForwardSlash(
        19,
        20,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        20,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                20,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        20,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                0,
                                0,
                            ),
                            kind: Sequence(
                                [
                                    RegExprNode {
                                        pos: (
                                            2,
                                            4,
                                        ),
                                        kind: Literal(
                                            "aa",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            7,
                                            14,
                                        ),
                                        kind: RangeCount(
                                            RegExprNode {
                                                pos: (
                                                    7,
                                                    8,
                                                ),
                                                kind: Literal(
                                                    "b",
                                                ),
                                            },
                                            1,
                                            8,
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            16,
                                            18,
                                        ),
                                        kind: Literal(
                                            "cc",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

