tests/src/snapshots/pluma_tests__parse_success__regex_star.snap
---
source: tests/src/parse_success.rs
expression: "/\"w\" \"o\"* \"w\"/"
---

=== Source ===
/"w" "o"* "w"/

=== Tokens ===
[
    ForwardSlash(
        0,
        1,
    ),
    StringLiteral(
        2,
        3,
    ),
    StringLiteral(
        6,
        7,
    ),
    Operator(
        8,
        9,
    ),
    StringLiteral(
        11,
        12,
    ),
    ForwardSlash(
        13,
        14,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        14,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                14,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        14,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                0,
                                0,
                            ),
                            kind: Sequence(
                                [
                                    RegExprNode {
                                        pos: (
                                            2,
                                            3,
                                        ),
                                        kind: Literal(
                                            "w",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            8,
                                            7,
                                        ),
                                        kind: ZeroOrMore(
                                            RegExprNode {
                                                pos: (
                                                    6,
                                                    7,
                                                ),
                                                kind: Literal(
                                                    "o",
                                                ),
                                            },
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            11,
                                            12,
                                        ),
                                        kind: Literal(
                                            "w",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

