tests/src/snapshots/pluma_tests__parse_success__string_escape_backslash.snap
---
source: tests/src/parse_success.rs
expression: "\"part 1\\\\part 2\""
---

=== Source ===
"part 1\\part 2"

=== Tokens ===
[
    StringLiteral(
        1,
        15,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        15,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                15,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        15,
                    ),
                    kind: Literal(
                        LiteralNode {
                            pos: (
                                1,
                                15,
                            ),
                            kind: Str(
                                "part 1\\part 2",
                            ),
                            typ: None,
                        },
                    ),
                    typ: None,
                },
            ),
        },
    ],
}

